--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,9 +30,9 @@ const posts = (await getCollection("posts")).sort(function (
             <h2 class="w-auto sm:w-[85%] md:w-[90%] leading-6">
               I am a <strong class="font-normal text-primary"
                 >{Config.me.job}</strong
-              > with over
+              > since
               <strong class="font-normal text-primary">{years} years</strong> of
-              experience. I am currently working with<strong
+              experience at Johns Hopkins University. I am currently working with<strong
                 class="font-normal text-primary"
               >
                 {Config.me.stack}</strong
