--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,8 +31,13 @@ const posts = (await getCollection("posts")).sort(function (
               I am a <strong class="font-normal text-primary"
                 >{Config.me.job}</strong
               > at
-              <strong class="font-normal text-primary">{Config.me.school}</strong>. 
-		I am currently working with<strong
+              <strong class="font-normal text-primary">{Config.me.school}</strong>
+		with a background in biomedical informatics at the Bachelor's level. 
+		I am currently studying computational immuno-oncology under the 
+		supervision of Dr. Rachel Karchin. Beyond science, I am a 
+		crochet artist, a cook with two years of commercial kitchen
+		experience, and a community enthusitast, always excited about 
+		organizing events!<strong
                 class="font-normal text-primary"
               >
                 {Config.me.stack}</strong
