--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,18 +30,15 @@ const posts = (await getCollection("posts")).sort(function (
             <h2 class="w-auto sm:w-[85%] md:w-[90%] leading-6">
               I am a <strong class="font-normal text-primary"
                 >{Config.me.job}</strong
-              > at
+              > in the Computer Science Department at 
               <strong class="font-normal text-primary">{Config.me.school}</strong>
-		with a background in biomedical informatics at the Bachelor's level. 
-		I am currently studying computational immuno-oncology under the 
-		supervision of Dr. Rachel Karchin. Beyond science, I am a 
+		with a Bachelor's degree in Biomedical Informatics from Zhejiang 
+		University-University of Edinburgh Institute. I am currently studying 
+		<strong class="font-normal text-primary">{Config.me.field}</strong> 
+		under the supervision of Dr. Rachel Karchin. Beyond science, I am a 
 		crochet artist, a cook with two years of commercial kitchen
 		experience, and a community enthusitast, always excited about 
-		organizing events!<strong
-                class="font-normal text-primary"
-              >
-                {Config.me.stack}</strong
-              >. Outside of programming I like to {Config.me.hobby}.
+		organizing events!
             </h2>
             <div class="custom-breadcrumbs">
               <ul>
