--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,18 +28,18 @@ const posts = (await getCollection("posts")).sort(function (
           <div class="col-span-2 flex flex-col gap-6 md:gap-8 my-auto">
             <h1 class="text-3xl">Hi, I’m {Config.me.name.split(" ")[0]}</h1>
             <h2 class="w-auto sm:w-[85%] md:w-[90%] leading-6">
-              I'm a <strong class="font-normal text-primary"
-                >{Config.me.job}</strong> in the Computer Science Department at 
+              I'm a <strong class="font-normal text-primary">{Config.me.job}</strong> 
+              in the Computer Science Department at 
               <strong class="font-normal text-primary">{Config.me.school}</strong>
-		with a Bachelor's degree in Biomedical Informatics from Zhejiang 
-		University-University of Edinburgh Institute. I'm currently studying 
-		<strong class="font-normal text-primary">{Config.me.field}</strong> 
-		under the supervision of Dr. Rachel Karchin. Beyond science, I'm a
-		crochet artist and an experienced cook with two years in commercial
-		kitchens. I'm deeply involved in my communities, serving as the founding president
-		of Indonesian Student Association at JHU and as a professional development
-		co-chair of GRACE (Graduate Assoc. of Women in CS and ECE). Teaching is also
-		close to my heart, and I'm on the path to becoming an academic. 
+		          with a Bachelor's degree in Biomedical Informatics from Zhejiang 
+		          University-University of Edinburgh Institute. I'm currently studying 
+		          <strong class="font-normal text-primary">{Config.me.field}</strong> 
+		          under the supervision of Dr. Rachel Karchin. Beyond science, I'm a
+		          crochet artist and an experienced cook with two years in commercial
+		          kitchens. I'm deeply involved in my communities, serving as the founding president
+		          of Indonesian Student Association at JHU and as a professional development
+		          co-chair of GRACE (Graduate Assoc. of Women in CS and ECE). Teaching is also
+		          close to my heart, and I'm on the path to becoming an academic. 
             </h2>
             <div class="custom-breadcrumbs">
               <ul>
