--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,15 +31,15 @@ const posts = (await getCollection("posts")).sort(function (
               I'm a <strong class="font-normal text-primary">{Config.me.job}</strong> 
               in the Computer Science Department at 
               <strong class="font-normal text-primary">{Config.me.school}</strong>
-		          with a Bachelor's degree in Biomedical Informatics from Zhejiang 
-		          University-University of Edinburgh Institute. I'm currently studying 
-		          <strong class="font-normal text-primary">{Config.me.field}</strong> 
-		          under the supervision of Dr. Rachel Karchin. Beyond science, I'm a
-		          crochet artist and an experienced cook with two years in commercial
-		          kitchens. I'm deeply involved in my communities, serving as the founding president
-		          of Indonesian Student Association at JHU and as a professional development
-		          co-chair of GRACE (Graduate Assoc. of Women in CS and ECE). Teaching is also
-		          close to my heart, and I'm on the path to becoming an academic. 
+		          with a Bachelor's degree in <strong class="font-normal text-primary">{Config.me.bachelor}</strong>  
+              from <strong class="font-normal text-primary">{Config.me.school2}</strong>. 
+              I'm currently studying <strong class="font-normal text-primary">{Config.me.field}</strong> 
+		          under the supervision of <strong class="font-normal text-primary">{Config.me.advisor}</strong>. 
+              Beyond science, I enjoy <strong class="font-normal text-primary">{Config.me.hobby1}</strong> and 
+              <strong class="font-normal text-primary">{Config.me.hobby2}</strong>, 
+              with some experience in commercial kitchens. <strong class="font-normal text-primary">{Config.me.hobby3}</strong> 
+              is also close to my heart, and I'm on the path to becoming an 
+              <strong class="font-normal text-primary">{Config.me.dream}</strong> . 
             </h2>
             <div class="custom-breadcrumbs">
               <ul>
