--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -62,7 +62,7 @@ const currentPath = Astro.url.pathname;
             </li>
             <li>
               <a
-                class={currentPath.startsWith("/posts") ? "text-primary" : ""}
+                class={currentPath.startsWith("/teaching") ? "text-primary" : ""}
                 href="/teaching">Teaching</a
               >
             </li>
