--- a/src/pages/teaching.astro
+++ b/src/pages/teaching.astro
@@ -9,18 +9,7 @@ import Layout from "../layouts/Layout.astro";
           <div class="col-span-2 flex flex-col gap-6 md:gap-8 my-auto">
             <h1 class="text-3xl">Hi, I’m {Config.me.name.split(" ")[0]}!</h1>
             <h2 class="w-auto sm:w-[85%] md:w-[90%] leading-6">
-              I'm a <strong class="font-normal text-primary">{Config.me.job}</strong> 
-              in the Computer Science Department at 
-              <strong class="font-normal text-primary">{Config.me.school}</strong>
-		          with a Bachelor's degree in <strong class="font-normal text-primary">{Config.me.bachelor}</strong>  
-              from <strong class="font-normal text-primary">{Config.me.school2}</strong>. 
-              I'm currently studying <strong class="font-normal text-primary">{Config.me.field}</strong> 
-		          under the supervision of <strong class="font-normal text-primary">{Config.me.advisor}</strong>. 
-              Beyond science, I enjoy <strong class="font-normal text-primary">{Config.me.hobby1}</strong> and 
-              <strong class="font-normal text-primary">{Config.me.hobby2}</strong>, 
-              with some experience in commercial kitchens. <strong class="font-normal text-primary">{Config.me.hobby3}</strong> 
-              is also close to my heart, and I'm on the path to becoming an 
-              <strong class="font-normal text-primary">{Config.me.dream}</strong> . 
+              Human-Computer Interaction 
             </h2>
           </div>
         </div>
