--- a/src/pages/teaching.astro
+++ b/src/pages/teaching.astro
@@ -7,7 +7,7 @@ import Layout from "../layouts/Layout.astro";
       <article class="md:flex-row-reverse md:justify-end md:gap-12">
         <div class="flex flex-row justify-between sm:grid-cols-3">
           <div class="col-span-2 flex flex-col gap-6 md:gap-8 my-auto">
-            <h1 class="text-3xl">Hi, I’m {Config.me.name.split(" ")[0]}!</h1>
+            <h1 class="text-3xl">Hi, I’m Adele!</h1>
             <h2 class="w-auto sm:w-[85%] md:w-[90%] leading-6">
               Human-Computer Interaction 
             </h2>
