--- a/src/pages/teaching.astro
+++ b/src/pages/teaching.astro
@@ -1,19 +1,17 @@
 ---
 import Layout from "../layouts/Layout.astro";
+---
 
 <Layout>
-  <main>
-    <div class="flex flex-col gap-20">
-      <article class="md:flex-row-reverse md:justify-end md:gap-12">
-        <div class="flex flex-row justify-between sm:grid-cols-3">
-          <div class="col-span-2 flex flex-col gap-6 md:gap-8 my-auto">
-            <h1 class="text-3xl">Hi, I’m Adele!</h1>
-            <h2 class="w-auto sm:w-[85%] md:w-[90%] leading-6">
-              Human-Computer Interaction 
-            </h2>
-          </div>
-        </div>
-      </article>
+  <div class="hero absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">
+    <div class="hero-content text-center">
+      <div class="max-w-md">
+        <h1 class="text-5xl font-bold">404</h1>
+        <p class="text-lg text-neutral-content py-5">
+          Human-Computer Interaction
+        </p>
+        <a href="/" class="link link-accent">Go back home</a>
+      </div>
     </div>
-  </main>
+  </div>
 </Layout>
